--- a/tatarlang-chart/charts/rabbitmq/Chart.yaml
+++ b/tatarlang-chart/charts/rabbitmq/Chart.yaml
@@ -1,7 +1,12 @@
 apiVersion: v2
 name: rabbitmq
-description: RabbitMQ subchart for Tatarlang
+description: RabbitMQ subchart for Tatarlang using Bitnami chart
 type: application
 version: 0.1.0
 appVersion: "3-management"
+dependencies:
+  - name: rabbitmq
+    version: 14.0.0
+    repository: https://charts.bitnami.com/bitnami
+    condition: rabbitmq.enabled
 
