--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,6 +34,7 @@ oauthlib==3.2.2
 outcome==1.3.0.post0
 packaging==25.0
 pillow==11.2.1
+pika==1.3.2
 prometheus_client==0.22.0
 prompt_toolkit==3.0.51
 psycopg2-binary==2.9
